    Chelsey Chang via ivanmi)

    HADOOP-8873. Port HADOOP-8175 (Add mkdir -p flag) to branch-1.
    (Akira Ajisaka via suresh)

    HDFS-4903. Print trash configuration and trash emptier state in namenode
    log. (Arpit Agarwal via suresh)

    MAPREDUCE-5406. Improve logging around Task Tracker exiting with JVM manager
    inconsistent state. (Chelsey Chang via cnauroth)

  BUG FIXES

    MAPREDUCE-5047. keep.failed.task.files=true causes job failure on 
    secure clusters. (sandyr via tucu)

    MAPREDUCE-5070. TestClusterStatus.testClusterMetrics fails on JDK7. 
    (sandyr via tucu)

    MAPREDUCE-5072. TestDelegationTokenRenewal.testDTRenewal fails in MR1 
    on jdk7. (sandyr via tucu)

    MAPREDUCE-5073. TestJobStatusPersistency.testPersistency fails on 
    JDK7. (sandyr via tucu)

    MAPREDUCE-5038. old API CombineFileInputFormat missing fixes that are
    in new API. (sandyr via tucu)

    HDFS-4622. Remove redundant synchronized from 
    FSNamesystem#rollEditLog in branch-1. (Jing Zhao via suresh)

    MAPREDUCE-2817. MiniRMCluster hardcodes 'mapred.local.dir' configuration 
    to 'build/test/mapred/local'. (rkanter via tucu)

    MAPREDUCE-5133. TestSubmitJob.testSecureJobExecution is flaky due to job 
    dir deletion race. (sandyr via tucu)

    MAPREDUCE-5218. Annotate (comment) internal classes as Private. 
    (kkambatl via tucu)

    MAPREDUCE-5217. Fix DistCP to work when launched by Oozie on a secure
    cluster. (Venkat Ranganathan via sseth)

    MAPREDUCE-5095. TestShuffleExceptionCount#testCheckException fails
    occasionally with JDK7 (Arpit Agarwal via hitesh)

    HADOOP-8981. TestMetricsSystemImpl fails on Windows. (Xuan Gong, backported
    by Chris Nauroth via suresh)

    MAPREDUCE-5250. Searching for ';' in JobTracker History throws 
    ArrayOutOfBoundException. (kkambatl via tucu)

    HADOOP-9624. TestFSMainOperationsLocalFileSystem failed when the Hadoop test
    root path has "X" in its name. (Xi Fang via cnauroth)
