@@ -20,6 +20,7 @@ package org.apache.hadoop.mapred;
 import java.io.*;
 
 import org.apache.hadoop.mapred.TaskTracker.TaskInProgress;
+import org.apache.log4j.Level;
 
 /** Runs a reduce task. */
 class ReduceTaskRunner extends TaskRunner {
@@ -71,6 +72,13 @@ class ReduceTaskRunner extends TaskRunner {
   public String getChildEnv(JobConf jobConf) {
     return jobConf.get(JobConf.MAPRED_REDUCE_TASK_ENV, 
                        super.getChildEnv(jobConf));
+  }
+
+  @Override
+  public Level getLogLevel(JobConf jobConf) {
+    return Level.toLevel(jobConf.get(JobConf.MAPRED_REDUCE_TASK_LOG_LEVEL, 
+                                     JobConf.DEFAULT_LOG_LEVEL.toString()),
+                         Level.INFO);
   }
 
 }
